# sportix

./: README.md  pyproject.toml  requirements.txt
apps/accounts/: test_endpoints.py  urls.py
apps/accounts/fixtures/: accounts.json
apps/base/: models.py
apps/sports/: admin.py  filters.py  models.py  serializers.py  test_endpoints.py  urls.py  views.py
apps/sports/fixtures/: sports.json
apps/sports/migrations/: 0001_initial.py
conf/: sportix.uwsgi.conf  sportix_nginx.conf  sportix_uwsgi.ini
sportix/: asgi.py  settings.py  urls.py  wsgi.py
