[tool.poetry]
name = "sportix"
version = "0.1.0"
description = ""
authors = ["Matvey <fms160602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
python-dotenv = "^1.0.1"
django-jazzmin = "^2.6.1"
djoser = "^2.2.2"
rest-framework-simplejwt = "^0.0.2"
django-extensions = "^3.2.3"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
